--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,16 +14,21 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.10.0",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "clsx": "^2.0.0",
+    "d3-cloud": "^1.2.7"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/d3-cloud": "^1.2.9",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.0"
   }
 }
+
+
+
 
